Get prizePool and endDate from game collection
