# swaggerSpec.json
@@ -76,6 +76,23 @@
         }
       }
     },
+    "/games/information": {
+      "get": {
+        "summary": "Get information about the games.",
+        "description": "This includes the prize pool and the duration of the game.",
+        "tags": [
+          "Games"
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/GameInformationResponse"
+          },
+          "default": {
+            "$ref": "#/components/responses/DefaultErrorResponse"
+          }
+        }
+      }
+    },
     "/payments/pay": {
       "post": {
         "summary": "Make a payment and participate in the game",
@@ -347,6 +364,29 @@
           "application/json": {
             "schema": {
               "$ref": "#/components/schemas/Message"
+            }
+          }
+        }
+      },
+      "GameInformationResponse": {
+        "description": "Game information",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "additionalProperties": false,
+              "required": [
+                "prizePool",
+                "endDate"
+              ],
+              "properties": {
+                "prizePool": {
+                  "type": "number"
+                },
+                "endDate": {
+                  "type": "number"
+                }
+              }
             }
           }
         }
